# sentiment-analysis

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build_docker_image.sh  constants.sh  create_docker_image.sh  run_api_docker.sh  run_api_server.sh  run_from_docker.sh  run_tests.sh  run_tests_docker.sh  setup_venv.sh  utils.sh
tests/: test_api.py
vaderapi/: main.py  schemas.py  sentiment_analysis.py
vaderapi/configs/: log_conf.yaml
